# SecureVersion/Elections/src/swagger.yaml
@@ -67,6 +67,12 @@ paths:
     post:
       summary: Vote for a candidate
       operationId: app.vote
+      parameters:
+        - in: header
+          name: Auth-Token
+          required: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -81,6 +87,12 @@ paths:
               application/json:
                 schema:
                   $ref: '#/components/schemas/Error'
+        401:
+          description: Invalid Token
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         500:
           description: An error occured
           content:
